Change Maven build phase from verify to test in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
                         <goals>
                             <goal>report</goal>
                         </goals>
-                        <phase>verify</phase>
+                        <phase>test</phase>
                     </execution>
                 </executions>
                 <configuration>
